--- a/style.css
+++ b/style.css
@@ -1,21 +1,47 @@
 
-h1 {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
+
+body{
+    font-family: "roboto";
+}
+
+
+h1 { 
     color: rgb(70, 10, 10);
     background-color: rgb(199, 139, 61);
     font-size: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
 }
 
-
-h3 {
-    color: rgb(241, 236, 222);
-    background-color: rgb(71, 59, 3);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.foto_portada{
     text-align: center;
 }
 
-p {
+.navegable{
+    text-align: center;
+    }
+
+a{
+    text-align: center;
+    text-decoration: none;
+    color: rgba(110, 20, 20, 0.671);
+    font-size: 1.5rem;
+}
+
+
+.carrousel{
+    text-align: center;
+}
+
+.ubicaciones{
+    text-align: center;
+}
+
+.cds{
+    text-align: center;
+    width: 500px;
+}
+/* p { 
     color: rgb(51, 33, 3);
     background-color: bisque;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -23,24 +49,15 @@ p {
 }
 
 
-ul {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    background-color: bisque;
-}
+
 
 img {
     width: 70%;
 }
 
-ul {
-    text-align: center;
-    font-size: 1.5rem;
-}
-
-a {
-    color: rgb(63, 47, 4);
+/* h3 { 
+    color: rgb(241, 236, 222);
+    background-color: rgb(71, 59, 3);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-
 }
