--- a/style.css
+++ b/style.css
@@ -1,61 +1,101 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 body{
-    font-family: "roboto";
+    font-family:'Roboto', sans-serif;
+    color: black;
+}
+.bg-body-tertiary{
+    width: 100%;
+}
+
+#navbarNavDropdown{
+    margin-right: 15%;
+    justify-content: right;
+}
+
+.navbar{
+    height: 5rem;
+    width: 100%;
+}
+nav{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+li.nav-item{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.nav-link {
+    color: rgb(177, 149, 119);
+}
+.nav-link:hover {
+    color: rgb(109, 97, 80);
+}
+
+.icono{
+    width: 250px;
+}
+
+footer{
+    background-color: rgb(250, 250, 250);
+    color: rgb(177, 149, 119);
+    text-align: center;
+    padding: 1rem;
+    margin-top: 2rem;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.btn-submit{
+    color: aliceblue;
+    background-color: rgb(177, 149, 119);
+}
+
+.btn-submit:hover{
+    background-color: rgb(240, 226, 167);
+    color: rgb(177, 149, 119) ;
+}
+
+.cards{
+    display: flex;
+    margin-bottom: 5rem;
+}
+
+.card{
+    margin: 1rem;
 }
 
 
-h1 { 
-    color: rgb(70, 10, 10);
-    background-color: rgb(199, 139, 61);
-    font-size: 40px;
+.contenedor-boton{
     text-align: center;
 }
 
-.foto_portada{
-    text-align: center;
+.btn-primary{
+    background-color:rgb(177, 149, 119) ;
+    border-color: rgb(231, 231, 231);
 }
 
-.navegable{
-    text-align: center;
-    }
-
-a{
-    text-align: center;
-    text-decoration: none;
-    color: rgba(110, 20, 20, 0.671);
-    font-size: 1.5rem;
+.btn-primary:hover{
+    background-color: rgb(224, 204, 150);
+    border-color: rgb(224, 204, 150);;
 }
 
+div.col-4{
+    display: block;}
 
-.carrousel{
-    text-align: center;
+.formulario{
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.ubicaciones{
-    text-align: center;
+.form-label{
+    color: rgb(158, 137, 77);
+    font-weight: bold;
+    margin-top: 10px;
 }
 
-.cds{
-    text-align: center;
-    width: 500px;
-}
-p { 
-    color: rgb(51, 33, 3);
-    font-family: "roboto";
-    text-align: center;
-}
-
-
-
-
-img {
-    width: 70%;
-}
-
-h3 { 
-    color: rgb(34, 26, 5);
-    font-family: "roboto";
-    text-align: center;
-}
