--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,5 @@
 
+/* NAVBAR */
 
 body{
     font-family:'Roboto', sans-serif;
@@ -32,11 +33,11 @@ li.nav-item{
 .nav-link:hover {
     color: rgb(109, 97, 80);
 }
-
+/* ICONO */
 .icono{
     width: 250px;
 }
-
+/* FOOTER */
 footer{
     background-color: rgb(250, 250, 250);
     color: rgb(177, 149, 119);
@@ -51,7 +52,7 @@ footer{
     width: 100%;
 }
 
-
+/* CARDS */
 .row{
     margin-top: 3rem;
     margin-left: 15%;
@@ -64,7 +65,7 @@ footer{
 }
 
 
-
+/*BIOGRAFIA */
 .cuadro-texto{
     width: 1200px;
     margin-top: 3rem;
@@ -90,10 +91,12 @@ footer{
 .bio{
     text-align: center;
 }
+
+
 .img-bio{
     width: 1200px;
 }
-
+/* AGENDA */
 .img-agenda{
     margin-bottom: 3rem;
     text-align: center;
